<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">


    <TextView
        android:id="@+id/dogApiWelcomeMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dog_welcome_message_margin_top"
        android:text="@string/welcome_to_an_app_all_about_dogs"
        android:textSize="@dimen/welcome_title_text_size"
        android:padding="@dimen/welcome_text_padding"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dogApiMoreInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dog_welcome_message_margin_top"
        android:text="@string/more_info_teat"
        android:textColor="@android:color/black"
        android:padding="@dimen/welcome_text_padding"
        android:textSize="@dimen/more_info_text_size"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/welcome_btn"
        app:layout_constraintTop_toBottomOf="@+id/dogApiWelcomeMessage" />

    <Button
        android:id="@+id/welcome_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/welcome_bt_margin_bottom"
        android:background="@android:color/holo_blue_light"
        android:padding="@dimen/welcome_bt_padding"
        android:text="@string/welcome_btn_text"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>