<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGrey"
    tools:context=".ui.HomeActivity">

    <EditText
        android:id="@+id/dog_search_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dog_search_margin"
        android:layout_marginLeft="@dimen/dog_search_margin"
        android:layout_marginRight="@dimen/dog_search_margin"
        android:hint="@string/search_for_a_dog"
        android:lines="1"
        android:inputType="text"
        android:maxLines="1"
        app:layout_constraintEnd_toStartOf="@+id/dog_search_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/dog_search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dog_search_margin"
        android:layout_marginLeft="@dimen/dog_search_margin"
        android:layout_marginRight="@dimen/dog_search_margin"
        android:text="@string/search"
        android:background="@android:color/holo_blue_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/dog_search_edit_text"/>

    <Button
        android:id="@+id/dog_random_search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dog_search_margin"
        android:layout_marginLeft="@dimen/dog_search_margin"
        android:layout_marginRight="@dimen/dog_search_margin"
        android:text="@string/random_search"
        android:background="@android:color/holo_blue_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dog_search_button"
        />

    <TextView
        android:id="@+id/error_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/error_message_text_size"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="gone"
        android:layout_margin="@dimen/error_message_margin"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/dog_view_page"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/dog_search_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>